--- a/source/blog/2017-08-06-redesign.html.markdown.erb
+++ b/source/blog/2017-08-06-redesign.html.markdown.erb
@@ -2,6 +2,7 @@
 title: New design, new me
 tags: life
 header_img: /img/home/header2.jpg
+published: false
 ---
 
 I redesigned this site again.
@@ -14,7 +15,7 @@ But my priorities have changed a bit
 since the time I last updated this site almost two years ago. I've rekindled my interest in photography. I'm minoring in music now.
 And living in California the past two summers with a car meant that I was able to
 more fully
-explore and fall in love with the rugged beauty of the outdoors&hellip; the mountain splendor of the Sierra Nevada.
+explore and fall in love with the mountain splendor, the rugged beauty of the outdoors.
 And with 10+ backpacking and camping trips in the past year alone,
 I wanted a way to record/share my experiences and photography online.
 The hope is that others will find the trip reports useful too!
