--- a/source/hike/2017-06-10-kelly-lake.html.markdown.erb
+++ b/source/hike/2017-06-10-kelly-lake.html.markdown.erb
@@ -32,7 +32,8 @@ for a more detailed map.
 # Trip Report
 
 I originally wanted to do a trip into the Sierras but due
-to the heavy snowpack I didn't want to risk going out there so early,
+to the heavy snowpack I didn't want to risk going out there so early
+in the season,
 especially given the trail condition updates and photos people posted.
 
 So I decided to do my first solo trip, just to see what it was all about.
