--- a/source/hike/2017-08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
+++ b/source/hike/2017-08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
@@ -1,8 +1,9 @@
 ---
 
-title: Packwood Lake to Old Snowy Loop
+published: false
+title: Packwood Lake to Old Snowy Mountain Loop
 date: 2017-08-18 PDT
-header_img: /hike/2017-06-10-kelly-lake/header.jpg
+header_img: /hike/2017-08-18-packwood-lake-to-old-snowy-loop/header.jpg
 end_date: 2017-08-20 PDT
 tags: backpacking, washington, goat-rocks, central-cascades
 state: Washington
@@ -14,13 +15,82 @@ rating: 10
 trailhead: Packwood Lake
 elevation_gain: 10220
 blurb: >
-    An extraordinary trip that included summiting the highest point along the
-    PCT in Washington, grand alpine vistas, two ridge walks, lush forests, two high camps.
+    An extraordinary trip that included summitting the highest point along the
+    PCT in Washington, grand alpine vistas, two ridge walks, lush forests, two high camps,
+    and two sub-alpine lakes.
     Three passing NOBO PCT thru-hikers mentioned that this was the most epic and beautiful
-    section they've experienced so far. I think that says a lot.
+    section they've experienced. I can see why.
 ---
-
 
 [Here's](https://caltopo.com/m/VSME) the link to the CalTopo map.
 
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/topo.jpg"), :caption => "Topographic map") %>
+
+
 # Trip Report
+
+### Day 1
+
+No epic views today but I knew we would be rewarded tomorrow
+for the work put in today.
+
+We left the trailhead parking lot at around 1:30pm.
+Immediately we started a relatively flat and
+uneventful 4 mile stretch through a forest.
+We soon arrived at Packwood Lake, a pretty
+nice subalpine lake.
+However, there were lots of people were camped here,
+and we kept going.
+
+After finally entering the designated wilderness area,
+we hiked 3.5 miles to Lost Lake, gaining quite a bit of elevation.
+The lake was nice -- the white trees in the distance ådded some
+unique color to the landscape.
+
+There was a family camping there, and
+it was nearing sunset, so we booked it to our destination
+-- a campsite at Beaver Bill Creek. Thankfully no one
+was camping there tonight!
+
+We were pleasantly surprised by the campsite&hellip; it was super close
+to the creek, and people had already made a bench and fire ring!
+
+The fog quickly rolled in right before sunset, and we started a campfire, ate good food,
+and drifted off to sleep.
+
+### Day 2
+
+Fog blanketed the forest after we woke up. We ate a warm breakfast,
+started a campfire, broke camp, and hit trail soon enough.
+After a bit, we started getting previews of the big vistas to come.
+
+We reached a ridge after a long uphill stretch. Walking along the ridge was
+such a cool experience. With nothing blocking the view, we had huge views in every direction.
+
+Sadly, after our long climb to the ridge, we started hiking downwards.
+It felt like wasted effort since we were going to
+climb back up anyways. It was straight downhill
+until we reached the bottom of the Packwood Saddle. At the bottom, we
+saw the fork in the trail that we would be taking tomorrow.
+There was a nice campsite too, but we'd planned on trekking to Elk Pass
+and setting up a high camp there in order to summit Old Snowy Mountain
+and still have time to make it back to camp before dark.
+
+We kept hiking along the Coyote Trail until it merged with
+the PCT at the top of Elk Pass. We found a nice flat spot right off the trail where
+we set up camp. The camp was super exposed, as it was on top of a pass, and there wasn't any water
+close to the site. The views were amazing though.
+
+I left camp at 3:30pm and started booking it up towards
+the summit of Old Snowy. I wanted to make it down before sunset.
+
+### Day 3
+
+We woke up to catch the sunrise. It was beautiful, but it was so so cold. I put on all my layers
+and still had to cocoon myself in the sleeping bag to feel comfortable.
+
+The rest of the day was pretty uneventul.
+We hiked back down to Packwood Saddle and took the left fork
+to get onto the Upper Packwood Lake Trail.
+Then we had 12 miles of mostly downhill through dense forest.
+Lots of bees, but thankfully there weren't too many mosquitos.
