--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,16 +1,16 @@
 ---
 title: null
 nav: home
-header_img: /img/home/header2.jpg
+header_img: /img/home/xd.jpg
 ---
 
 <section id="masthead" class='parallax-wrap'>
-    <div class="parallax-img masthead-parallax-img"><div class="darken-filter"></div></div>
+    <div class="parallax-img masthead-parallax-img"><div class="darken-filter less"></div></div>
     <div class="parallax-content">
       <div class="masthead-home-tagline">
         <div>
           <h1 class="animated slideInDown">Hi, I&rsquo;m Stanley.</h1>
-          <h3 class="animated slideInDown"><em>// outdoor adventures, music, photography //</em></h3>
+          <h3 class="animated slideInDown"><em>outdoor adventures, music &amp; photography</em></h3>
 
         </div>
       </div>
@@ -22,7 +22,7 @@ header_img: /img/home/header2.jpg
     <p>
     I'm a senior at the Massachusetts Institute of Technology, working towards a major in Computer Science
     with a minor in Music (concentrating in theory &amp; composition).
-    Unless something dramatically changes, I'm gonna be a software engineer.
+    I'm also a software engineer.
     In the past, I've interned at Dropbox, Google, Facebook, and Jane Street.
     </p>
 
@@ -30,7 +30,7 @@ header_img: /img/home/header2.jpg
     <b>Music keeps me sane&hellip;</b> I've played the piano for most of my life,
     and I love to improvise. Currently trying to learn to learn jazz piano.
     Sometimes, I <a href="#">arrange</a> or <a href="#">compose</a> music.
-    Other times, I noodle around on my guitar or ukelele. I wish I could sing well.
+    Other times, I noodle around on my guitar or ukelele.
     </p>
 
     <p class="no-margin-bottom">
@@ -62,7 +62,7 @@ header_img: /img/home/header2.jpg
     aperture make it so much easier!
     </p>
     <p class="no-margin-bottom">
-    All the photos on this website were taken by me. Hope you enjoy!
+    All the photos on this website were taken by me. Hope you enjoy them!
     </p>
   </div>
 </section>
@@ -85,7 +85,6 @@ header_img: /img/home/header2.jpg
         <h1>Questions? Comments? Just fill this out&hellip;</h1>
         <div id="contact_form">
           <form>
-            <input type="hidden" name="salt" id="salt" />
             <ul>
               <li id="send-error"><span>Sorry! An error occured while sending.</span></li>
               <li>
