--- a/source/hike/2017-08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
+++ b/source/hike/2017-08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
@@ -26,7 +26,6 @@ blurb: >
 
 <%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/topo.jpg"), :caption => "Topographic map") %>
 
-
 # Trip Report
 
 ### Day 1
@@ -54,6 +53,9 @@ was camping there tonight!
 
 We were pleasantly surprised by the campsite&hellip; it was super close
 to the creek, and people had already made a bench and fire ring!
+
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/camp1.jpg"), :caption => "Topographic map") %>
+
 
 The fog quickly rolled in right before sunset, and we started a campfire, ate good food,
 and drifted off to sleep.
