--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <% if current_page.data.nav == 'home' %>
-      <meta name="Description" content="Hi there! I'm Stanley Cen, a senior at MIT studying computer science and music. I sometimes blog about things.">
+      <meta name="Description" content="Hi there! I'm Stanley Cen, a senior at MIT studying computer science and music. Sometimes I write about hiking, photography, and music.">
     <% end %>
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
