publish latest trip finally

--- a/source/hike/2017-08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
+++ b/source/hike/2017-08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
@@ -1,6 +1,5 @@
 ---
 
-published: false
 title: Packwood Lake to Old Snowy Mountain Loop
 date: 2017-08-18 PDT
 header_img: /hike/2017-08-18-packwood-lake-to-old-snowy-loop/header.jpg
@@ -28,9 +27,11 @@ blurb: >
 
 # Trip Report
 
+This was my last trip of the season. It was epic.
+
 ### Day 1
 
-No epic views today but I knew we would be rewarded tomorrow
+No sweeping views today but I knew we would be rewarded tomorrow
 for the work put in today.
 
 We left the trailhead parking lot at around 1:30pm.
@@ -43,7 +44,7 @@ and we kept going.
 
 After finally entering the designated wilderness area,
 we hiked 3.5 miles to Lost Lake, gaining quite a bit of elevation.
-The lake was nice -- the white trees in the distance ådded some
+The lake was nice -- the white trees in the distance added some
 unique color to the landscape.
 
 There was a family camping there, and
@@ -54,8 +55,7 @@ was camping there tonight!
 We were pleasantly surprised by the campsite&hellip; it was super close
 to the creek, and people had already made a bench and fire ring!
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/camp1.jpg"), :caption => "Topographic map") %>
-
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/camp1.jpg"), :caption => "Camp 1") %>
 
 The fog quickly rolled in right before sunset, and we started a campfire, ate good food,
 and drifted off to sleep.
@@ -66,10 +66,15 @@ Fog blanketed the forest after we woke up. We ate a warm breakfast,
 started a campfire, broke camp, and hit trail soon enough.
 After a bit, we started getting previews of the big vistas to come.
 
-We reached a ridge after a long uphill stretch. Walking along the ridge was
-such a cool experience. With nothing blocking the view, we had huge views in every direction.
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/ledge.jpg"), :caption => "We were greeted by grand vistas") %>
 
-Sadly, after our long climb to the ridge, we started hiking downwards.
+We reached a ridge after a long uphill stretch. Walking along the ridge was
+such a cool experience. With nothing blocking the view, we had huge views in every direction. The tall mountain
+far in the distance is Old Snowy, which I would be summitting later in the day.
+
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/ridge.jpg"), :caption => "Ridge walk! with Old Snowy, our destination, in the distance") %>
+
+Sadly, after our long climb to the ridge, we started hiking downhill.
 It felt like wasted effort since we were going to
 climb back up anyways. It was straight downhill
 until we reached the bottom of the Packwood Saddle. At the bottom, we
@@ -86,6 +91,41 @@ close to the site. The views were amazing though.
 I left camp at 3:30pm and started booking it up towards
 the summit of Old Snowy. I wanted to make it down before sunset.
 
+The hike to the summit was pretty cool. It mostly ran along a thin ridgeline, so hiking that quickly
+was super exhilarating. I saw a few mountain goats and ran into group descending. The views back into
+the valley were absurd.
+
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/valleyview.jpg"), :caption => "The view back into the valley...") %>
+
+At some points I'm pretty sure I lost the trail and had to scramble on all fours to continue upwards.
+Kinda sketch. Also, the clouds started rolling in as I was approaching the summit, so visibility was
+pretty bad at some points. After pulling myself up to the summit, I spent more than an hour at the top,
+admiring the view, taking photos, and waiting for the clouds to clear. When they did, I was amazed.
+There were 360 views in every direction, I could see Mt. Rainier in the distance, and I could follow
+the ridgelines to where I came. A group of NOBO PCT thru-hikers summited shortly after I did, and I spent
+a bunch of time talking to them and admiring the views.
+
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/header.jpg"), :caption => "The view from the summit...") %>
+
+At some point, I forced myself to leave since there was less than hour of daylight left. It got super
+cold and windy so I put on all my layers and started running towards camp. The clouds had come in
+at that altitude so I was literally walking through clouds the entire time. The thru-hikers were
+close behind me. But as I was nearing camp, the clouds started thinning out and I got a glimpse of
+sunset peaking through the fog. It was one of the most beautiful things I'd ever witnessed.
+The others and I stopped and simply stared. They said it was the most beautiful section of the hike
+they'd experienced so far -- I can see why.
+
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/freeze.jpg"), :caption => "Freezing my ass off") %>
+
+The sky lit up in vivid shades of pink, magenta, and purple. It was one of the most beautiful sunsets I'd ever seen.
+
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/lit.jpg"), :caption => "Pink skies") %>
+
+After getting back down to camp, we made dinner and started a fire to warm ourselves. Surprisingly, there
+weren't any clouds that night, so I tried my hand at capturing the rising Milky Way.
+
+<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/stars.jpg"), :caption => "The Milky Way rises over the Goat Rocks.") %>
+
 ### Day 3
 
 We woke up to catch the sunrise. It was beautiful, but it was so so cold. I put on all my layers
@@ -96,3 +136,5 @@ We hiked back down to Packwood Saddle and took the left fork
 to get onto the Upper Packwood Lake Trail.
 Then we had 12 miles of mostly downhill through dense forest.
 Lots of bees, but thankfully there weren't too many mosquitos.
+
+All in all, it was an amazing trip. I can't wait for the next opportunity to go back outdoors!
