--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -7,7 +7,7 @@ title: "Blog"
         <div class="blog-list-masthead">
             <div class>
                 <h1 class="">blog.</h1>
-                <h4 class=""><em>&ldquo;i&rsquo;m significant!&hellip; screamed the dust speck.&rdquo; &mdash; calvin &amp; hobbes</em></h3>
+              <!--   <h4 class=""><em>&ldquo;i&rsquo;m significant!&hellip; screamed the dust speck.&rdquo; &mdash; calvin &amp; hobbes</em></h3> -->
             </div>
         </div>
     </div>
