--- a/source/hike/2017/06-10-kelly-lake.html.markdown.erb
+++ b/source/hike/2017/06-10-kelly-lake.html.markdown.erb
@@ -3,7 +3,7 @@
 published: false
 title: Kelly Lake
 date: 2017-06-10 PDT
-header_img: /hike/2017-06-10-kelly-lake/header.jpg
+header_img: header.jpg
 end_date: 2017-06-11 PDT
 tags: backpacking, california, henry-coe
 state: California
@@ -11,7 +11,7 @@ park: Henry Coe State Park
 area:
 miles: 14
 trail_type: In-and-Out
-rating: 7
+rating: 5
 trailhead: Hunting Hollow
 elevation: 880
 elevation_gain: 2698
@@ -28,7 +28,7 @@ After a bit, take a right onto Kelly Lake trail and descend to the
 lake. See [here](http://coepark.net/pineridgeassociation/documents/maps/gilroy_entrances/coe_gilroy_entrances.pdf)
 for a more detailed map.
 
-<%= image(:src => url_for("2017-06-10-kelly-lake/topo.jpg"), :caption => "Topo map", :width => 500) %>
+<%= img("topo.jpg", "Topo map", width: 500) %>
 
 # Trip Report
 
