--- a/source/hike/2017/07-15-pct-section.html.markdown.erb
+++ b/source/hike/2017/07-15-pct-section.html.markdown.erb
@@ -2,13 +2,13 @@
 
 title: CA Section K near Donner Summit
 date: 2017-07-15 PDT
-header_img: /hike/2017-07-15-pct-section/header.jpg
+header_img: header.jpg
 tags: backpacking, california, tahoe, donner-lake
 state: California
 miles: 3
 trail_type: In-and-Out
 area: Pacific Crest Trail
-rating: 8
+rating: 7
 trailhead: Off Donner Pass Rd.
 elevation: 7017
 elevation_gain: 500
@@ -19,7 +19,7 @@ blurb: >
 We followed the PCT at the beginning, but quickly went off trail to explore.
 It's not hard to find the trail again, even without GPS or map/compass.
 
-<%= image(:src => url_for("2017-07-15-pct-section/topo.jpg"), :caption => "Topo map") %>
+<%= img("topo.jpg", "Topo map") %>
 
 # Trip Report
 
@@ -40,28 +40,28 @@ a pond full of Chinese Catfish. According to Chris they were [put there
 After a bit of climbing, we got to this amazing overlook of Donner Lake.
 Someone had installed a rope swing here!
 
-<%= image(:src => url_for("2017-07-15-pct-section/swing.jpg"), :caption => "Rope swing", :width => 500) %>
+<%= img("swing.jpg", "Rope swing", :width => 500) %>
 
 We were treated to one of the most spectacular sunsets I'd ever seen before. It looked like
 the sky was literally on fire. I know it looks super saturated, but I assure you,
 the sky literally looked like this. I don't even know what to say.
 
-<%= image(:src => url_for("2017-07-15-pct-section/fire.jpg"), :caption => "The sky's on fire!") %>
+<%= img("fire.jpg", "The sky's on fire!") %>
 
 As night fell, I played around with some long exposures. This one was exposed for
 25 seconds. You can see the cars on I-80 East, the town of Truckee, and the cabins
 surrounding the lake!
 
-<%= image(:src => url_for("2017-07-15-pct-section/night.jpg"), :caption => "Moody.") %>
+<%= img("night.jpg", "Moody.") %>
 
 We also played with some astrophotography! We climbed to a nearby peak
 to get this awesome photo of some stars. The light pollution was surpisingly low, and
 we spent a lot of time just laying down and stargazing.
 
-<%= image(:src => url_for("2017-07-15-pct-section/stars.jpg"), :caption => "Feeling insignificant.") %>
+<%= img("stars.jpg", "Feeling insignificant.") %>
 
 The next day, we had to hitchhike back into town. It was our first time,
 so we were actually pretty excited. We actually got picked up within 10 minutes
 by this nice couple who were also returning from a hike.
 
-<%= image(:src => url_for("2017-07-15-pct-section/hitchhike.jpg"), :caption => "Hitchin' a ride") %>
+<%= img("hitchhike.jpg", "Hitchin' a ride") %>
