--- a/source/hike/2017/07-22-vernal-nevada-fall.html.markdown.erb
+++ b/source/hike/2017/07-22-vernal-nevada-fall.html.markdown.erb
@@ -5,7 +5,7 @@ date: 2017-07-22 PDT
 extra_dates:
     - 2017-07-04 PDT
     - 2017-06-11 PDT
-header_img: /hike/2017-07-22-vernal-nevada-fall/header.jpg
+header_img: header.jpg
 tags: hiking, california, yosemite
 state: California
 park: Yosemite National Park
@@ -35,29 +35,29 @@ This photo was taken from the
 Vernal Fall footbridge. Even though I'd already been here 3 times before my June 2017 trip,
 I'd never seen the Merced River like this.
 
-<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/swollen.jpg"), :caption => "You don't wanna fall into this") %>
+<%= img("swollen.jpg", "You don't wanna fall into this") %>
 
 In June, we went up pretty early in the morning at around 8:30am, and there I
 witnessed some of the most beautiful light I'd ever seen. The sun streaming
 through the mist created some awesome "God rays".
 
-<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/godrays.jpg"), :caption => "We looked up and saw this.") %>
+<%= img("godrays.jpg", "We looked up and saw this.") %>
 
-<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/rays.jpg"), :caption => "Spectacular.") %>
+<%= img("rays.jpg", "Spectacular.") %>
 
 The photos aren't that sharp, since my lens was completely covered in water. Honestly,
 my camera probably sustained some water damage since it was getting _SOAKED_.
 
-<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/nevada.jpg"), :caption => "Nevada Fall was raging as well", :width => 500) %>
+<%= img("nevada.jpg", "Nevada Fall was raging as well", :width => 500) %>
 
 As you descend from Nevada Fall via the John Muir Trail, you're rewarded
 with an amazing view of Libery Cap and Nevada Fall.
 
-<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/libcap.jpg"), :caption => "Inspiring.") %>
+<%= img("libcap.jpg", "Inspiring.") %>
 
 And if you can stay after sunset at the top of Nevada Fall, you gotta!
 It's spectacular. Literally no one else does it, since you have to hike the 4 mile
 descent to the valley floor in the dark. But it's so worth it&hellip; I'll
 let this picture speak for itself.
 
-<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/sunset.jpg"), :caption => "...") %>
+<%= img("sunset.jpg", "...") %>
