--- a/source/hike/2017/07-29-lake-aloha.html.markdown.erb
+++ b/source/hike/2017/07-29-lake-aloha.html.markdown.erb
@@ -2,7 +2,7 @@
 
 title: Lake Aloha
 date: 2017-07-29 PDT
-header_img: /hike/2017-07-29-lake-aloha/header.jpg
+header_img: header.jpg
 end_date: 2017-07-30 PDT
 tags: backpacking, california, tahoe, desolation-wilderness
 state: California
@@ -20,7 +20,7 @@ blurb: >
 ---
 We essentially stayed on the PCT the entire way. Here's the route we took:
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/topo.jpg"), :caption => "Topographic map") %>
+<%= img("2017-07-29-lake-aloha/topo.jpg", "Topographic map") %>
 
 # Trip Report
 
@@ -51,7 +51,7 @@ I noticed that a lot of people set up camp near the south to south-east
 shore of the lake. This part is pretty forested, and the views aren't as good.
 If you hike 0.5 to 1 mile along the eastern shore you'll find tons of good spots.
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/campsite.jpg"), :caption => "Our campsite") %>
+<%= img("campsite.jpg", "Our campsite") %>
 
 Mosquitos were a lot better than expected! There were definitely
 swarms with thousands of mosquitos, but most of them didn't bite.
@@ -62,9 +62,9 @@ The sunset was amazing. Every single time, without fail, I'm taken
 aback by the beauty of an alpine sunset. It's no wonder why
 John Muir called the Sierra Nevada the "Range of Light".
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/sunset.jpg"), :caption => "Sunset over the Crystal Range") %>
+<%= img("sunset.jpg", "Sunset over the Crystal Range") %>
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/sunset_behind.jpg"), :caption => "Last light on the peak behind our camp") %>
+<%= img("sunset_behind.jpg", "Last light on the peak behind our camp") %>
 
 We went to bed around 10pm, and I set my alarm for 3am so I could attempt
 to photograph the Milky Way over the Crystal Range.
@@ -79,14 +79,14 @@ I spent almost 2 hours staring and taking photos.
 Conditions were perfect -- here wasn't any wind at 3am, and the water was perfectly still.
 I'm super proud of this photo.
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/milkyway.jpg"), :caption => "Milky Way over Lake Aloha") %>
+<%= img("milkyway.jpg", "Milky Way over Lake Aloha") %>
 
 I went to sleep around 5am and set an alarm for 5:30am to watch the sunrise.
 Super worth!
 I actually left my tripod there overnight so I managed to capture the same scene
 at sunrise.
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/header.jpg"), :caption => "Sunrise over Lake Aloha") %>
+<%= img("header.jpg", "Sunrise over Lake Aloha") %>
 
 We had breakfast shortly afterwards, broke camp, and quickly hiked
 back to the trailhead before temperatures started climbing.
