--- a/source/hike/2017/08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
+++ b/source/hike/2017/08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
@@ -2,7 +2,7 @@
 
 title: Packwood Lake to Old Snowy Mountain Loop
 date: 2017-08-18 PDT
-header_img: /hike/2017-08-18-packwood-lake-to-old-snowy-loop/header.jpg
+header_img: header.jpg
 end_date: 2017-08-20 PDT
 tags: backpacking, washington, goat-rocks, central-cascades
 state: Washington
@@ -23,7 +23,7 @@ blurb: >
 
 [Here's](https://caltopo.com/m/VSME) the link to the CalTopo map.
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/topo.jpg"), :caption => "Topographic map") %>
+<%= img("topo.jpg", "Topo map") %>
 
 # Trip Report
 
@@ -55,7 +55,7 @@ was camping there tonight!
 We were pleasantly surprised by the campsite&hellip; it was super close
 to the creek, and people had already made a bench and fire ring!
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/camp1.jpg"), :caption => "Camp 1") %>
+<%= img("camp1.jpg", "Camp 1") %>
 
 The fog quickly rolled in right before sunset, and we started a campfire, ate good food,
 and drifted off to sleep.
@@ -66,13 +66,13 @@ Fog blanketed the forest after we woke up. We ate a warm breakfast,
 started a campfire, broke camp, and hit trail soon enough.
 After a bit, we started getting previews of the big vistas to come.
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/ledge.jpg"), :caption => "We were greeted by grand vistas") %>
+<%= img("ledge.jpg", "We were greeted by grand vistas") %>
 
 We reached a ridge after a long uphill stretch. Walking along the ridge was
 such a cool experience. With nothing blocking the view, we had huge views in every direction. The tall mountain
 far in the distance is Old Snowy, which I would be summitting later in the day.
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/ridge.jpg"), :caption => "Ridge walk! with Old Snowy, our destination, in the distance") %>
+<%= img("ridge.jpg", "Ridge walk! with Old Snowy, our destination, in the distance") %>
 
 Sadly, after our long climb to the ridge, we started hiking downhill.
 It felt like wasted effort since we were going to
@@ -95,7 +95,7 @@ The hike to the summit was pretty cool. It mostly ran along a thin ridgeline, so
 was super exhilarating. I saw a few mountain goats and ran into group descending. The views back into
 the valley were absurd.
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/valleyview.jpg"), :caption => "The view back into the valley...") %>
+<%= img("valleyview.jpg", "The view back into the valley...") %>
 
 At some points I'm pretty sure I lost the trail and had to scramble on all fours to continue upwards.
 Kinda sketch. Also, the clouds started rolling in as I was approaching the summit, so visibility was
@@ -105,7 +105,7 @@ There were 360 views in every direction, I could see Mt. Rainier in the distance
 the ridgelines to where I came. A group of NOBO PCT thru-hikers summited shortly after I did, and I spent
 a bunch of time talking to them and admiring the views.
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/header.jpg"), :caption => "The view from the summit...") %>
+<%= img("header.jpg", "The view from the summit...") %>
 
 At some point, I forced myself to leave since there was less than hour of daylight left. It got super
 cold and windy so I put on all my layers and started running towards camp. The clouds had come in
@@ -115,16 +115,16 @@ sunset peaking through the fog. It was one of the most beautiful things I'd ever
 The others and I stopped and simply stared. They said it was the most beautiful section of the hike
 they'd experienced so far -- I can see why.
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/freeze.jpg"), :caption => "Freezing my ass off") %>
+<%= img("freeze.jpg", "Freezing my ass off") %>
 
 The sky lit up in vivid shades of pink, magenta, and purple. It was one of the most beautiful sunsets I'd ever seen.
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/lit.jpg"), :caption => "Pink skies") %>
+<%= img("lit.jpg", "Pink skies") %>
 
 After getting back down to camp, we made dinner and started a fire to warm ourselves. Surprisingly, there
 weren't any clouds that night, so I tried my hand at capturing the rising Milky Way.
 
-<%= image(:src => url_for("2017-08-18-packwood-lake-to-old-snowy-loop/stars.jpg"), :caption => "The Milky Way rises over the Goat Rocks.") %>
+<%= img("stars.jpg", "The Milky Way rises over the Goat Rocks.") %>
 
 ### Day 3
 
