--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -1103,7 +1103,9 @@ q:after {
 
     .post-image {
       width: 100%;
-      height: 478.125px;
+      // height: 478.125px;
+      // using padding-top preserves the aspect ratio
+      padding-top: 56%;
       @include border-radius(5px);
       background-repeat: no-repeat !important;
       background-position: center center !important;
