show water/bug report

--- a/source/_hike_info.erb
+++ b/source/_hike_info.erb
@@ -13,6 +13,8 @@
         <%= hike_maybe_show_row('Type', @hike[:trail_type]) %>
         <%= hike_maybe_show_row('Trailhead', @hike[:trailhead]) %>
         <%= hike_maybe_show_row('Rating', @hike[:rating]) %>
+        <%= hike_maybe_show_row('Water report', @hike[:water]) %>
+        <%= hike_maybe_show_row('Bug report', @hike[:bugs]) %>
     </tbody>
 </table>
 
