--- a/source/_hike_info.erb
+++ b/source/_hike_info.erb
@@ -15,6 +15,7 @@
         <%= hike_maybe_show_row('Rating', @hike[:rating]) %>
         <%= hike_maybe_show_row('Water report', @hike[:water]) %>
         <%= hike_maybe_show_row('Bug report', @hike[:bugs]) %>
+        <%= hike_maybe_show_row('Permits', @hike[:permit]) %>
     </tbody>
 </table>
 
