--- a/source/hike/2017/06-10-kelly-lake.html.markdown.erb
+++ b/source/hike/2017/06-10-kelly-lake.html.markdown.erb
@@ -2,9 +2,9 @@
 
 published: false
 title: Kelly Lake
-date: 2017-06-10 PDT
+date: 2017-06-10
 header_img: header.jpg
-end_date: 2017-06-11 PDT
+end_date: 2017-06-11
 tags: backpacking, california, henry-coe
 state: California
 park: Henry Coe State Park
