--- a/source/hike/2017/07-15-pct-section.html.markdown.erb
+++ b/source/hike/2017/07-15-pct-section.html.markdown.erb
@@ -1,7 +1,8 @@
 ---
 
 title: CA Section K near Donner Summit
-date: 2017-07-15 PDT
+date: 2017-07-15
+end_date: 2017-07-16
 header_img: header.jpg
 tags: backpacking, california, tahoe, donner-lake
 state: California
