--- a/source/hike/2017/07-22-vernal-nevada-fall.html.markdown.erb
+++ b/source/hike/2017/07-22-vernal-nevada-fall.html.markdown.erb
@@ -1,10 +1,10 @@
 ---
 
 title: Vernal &amp; Nevada Falls (2017)
-date: 2017-07-22 PDT
+date: 2017-07-22
 extra_dates:
-    - 2017-07-04 PDT
-    - 2017-06-11 PDT
+    - 2017-07-04
+    - 2017-06-11
 header_img: header.jpg
 tags: hiking, california, yosemite
 state: California
