--- a/source/hike/2017/07-23-clouds-rest.html.markdown.erb
+++ b/source/hike/2017/07-23-clouds-rest.html.markdown.erb
@@ -1,7 +1,7 @@
 ---
 
 title: Clouds Rest
-date: 2017-07-23 PDT
+date: 2017-07-23
 header_img: header.jpg
 tags: hiking, california, yosemite
 state: California
