--- a/source/hike/2017/07-29-lake-aloha.html.markdown.erb
+++ b/source/hike/2017/07-29-lake-aloha.html.markdown.erb
@@ -1,9 +1,9 @@
 ---
 
 title: Lake Aloha
-date: 2017-07-29 PDT
+date: 2017-07-29
 header_img: header.jpg
-end_date: 2017-07-30 PDT
+end_date: 2017-07-30
 tags: backpacking, california, tahoe, desolation-wilderness
 state: California
 park:
