--- a/source/hike/2017/08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
+++ b/source/hike/2017/08-18-packwood-lake-to-old-snowy-loop.html.markdown.erb
@@ -1,9 +1,9 @@
 ---
 
 title: Packwood Lake to Old Snowy Mountain Loop
-date: 2017-08-18 PDT
+date: 2017-08-18
 header_img: header.jpg
-end_date: 2017-08-20 PDT
+end_date: 2017-08-20
 tags: backpacking, washington, goat-rocks, central-cascades
 state: Washington
 park:
