--- a/source/hike/2020/07-18-paradise-park.html.markdown.erb
+++ b/source/hike/2020/07-18-paradise-park.html.markdown.erb
@@ -1,15 +1,15 @@
 ---
 
 published: false
-title:
-date: <%= @date.strftime("%Y-%m-%d") %>
-end_date:
+title: Paradise Park
+date: 2020-07-18
 header_img: header.jpg
+end_date: 2020-07-19
 tags:
 state:
 country:
 park:
-area:
+area: Mt. Hood Wilderness
 miles:
 trail_type:
 rating:
@@ -18,6 +18,5 @@ elevation_gain:
 difficulty:
 bugs:
 water:
-permit:
 blurb: >
 ---
