--- a/source/hike/2020/07-25-goat-lake.html.markdown.erb
+++ b/source/hike/2020/07-25-goat-lake.html.markdown.erb
@@ -1,15 +1,15 @@
 ---
 
 published: false
-title:
-date: <%= @date.strftime("%Y-%m-%d") %>
-end_date:
+title: Goat Lake Loop
+date: 2020-07-25
 header_img: header.jpg
+end_date: 2020-07-26
 tags:
 state:
 country:
 park:
-area:
+area: Goat Rocks Wilderness
 miles:
 trail_type:
 rating:
@@ -18,6 +18,5 @@ elevation_gain:
 difficulty:
 bugs:
 water:
-permit:
 blurb: >
 ---
