--- a/source/hike/2020/08-01-broken-top.html.markdown.erb
+++ b/source/hike/2020/08-01-broken-top.html.markdown.erb
@@ -1,15 +1,15 @@
 ---
 
 published: false
-title:
-date: <%= @date.strftime("%Y-%m-%d") %>
-end_date:
+title: Broken Top via Todd Lake
+date: 2020-08-01
 header_img: header.jpg
+end_date: 2020-08-02
 tags:
 state:
 country:
 park:
-area:
+area: Three Sisters Wilderness
 miles:
 trail_type:
 rating:
@@ -18,6 +18,5 @@ elevation_gain:
 difficulty:
 bugs:
 water:
-permit:
 blurb: >
 ---
