--- a/source/hike/2020/08-08-tatoosh-ridge-lake.html.markdown.erb
+++ b/source/hike/2020/08-08-tatoosh-ridge-lake.html.markdown.erb
@@ -1,15 +1,15 @@
 ---
 
 published: false
-title:
-date: <%= @date.strftime("%Y-%m-%d") %>
-end_date:
+title: Tatoosh Ridge & Lake
+date: 2020-08-08
 header_img: header.jpg
+end_date: 2020-08-09
 tags:
 state:
 country:
 park:
-area:
+area: Tatoosh Wilderness
 miles:
 trail_type:
 rating:
@@ -18,6 +18,5 @@ elevation_gain:
 difficulty:
 bugs:
 water:
-permit:
 blurb: >
 ---
